worked on blog and pest control

--- a/exercises/boxes/index.html
+++ b/exercises/boxes/index.html
@@ -4,20 +4,21 @@
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
-		<div class="oneBig"></div>
+		<div class="oneBig addBorder margin"></div>
 		<div class="oneBig">
-			<div class="small1"></div>
-			<div class="small1"></div>
-			<div class="small1"></div>
-			<div class="small1"></div>
+			<div class="small1 addBorder"></div>
+			<div class="small1 addBorder"></div>
+			<div class="small1 addBorder"></div>
+			<div class="small1 addBorder"></div>
 		</div>
 		<div class="oneBig">
-			<div class="half"></div>
-			<div class="half"></div>
+			<div class="half addBorder"></div>
+			<div class="half addBorder"></div>
+			<div class="half addBorder"></div>
 		</div>
 		<div class="oneBig">
-			<div class="green"></div>
-			<div class="orange"></div>
+			<div class="green addBorder"></div>
+			<div class="orange addBorder"></div>
 		</div>
 		
 		
