finised mario worked on exercises

--- a/exercises/flag-css/greece/index.html
+++ b/exercises/flag-css/greece/index.html
@@ -1,18 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="style.css" class="css">
 </head>
 
 <body>
-	<div class="ggparent">
-		<div class="parent">
-			<div class="child1"></div>
-			<div class="child2"></div>
-			<div class="child3"></div>
+	<div class="parent">
+	<div class="smLine"></div>
+	<div class="smLine2"></div>
+	<div class="smLine3"></div>
+		<div class="blueBox">
+			<div class="blueBox">
+				<div class="smBox"></div>
+				<div class="smBox2"></div>
+				<div class="smBox3"></div>
+				<div class="smBox4"></div>
+			</div>
+		</div>
+		<div>
+			<div class="bigLine"></div>
+			<div class="bigLine2"></div>
 		</div>
 	</div>
+
+
 </body>
+
 </html>
