--- a/exercises/design-a-blog/index.html
+++ b/exercises/design-a-blog/index.html
@@ -9,34 +9,47 @@
 </head>
 
 <body>
+	<nav>
+		<span class="navBar">
+			<button class ="button">Seeds</button>
+			<button class ="button">Soil</button>
+			<button class ="button">Spirit</button>
+			<a href="url..">Great Garden Tools</a>
+		</span>
+	</nav>
 
-	<div class="parent">
-
-		<header>
-			<h1>Garden of life, a growing blog!</h1>
-
-		</header>
 
 
+	<header>
+		<h1>Garden of life, a growing blog!</h1>
+
+	</header>
 
 
-		<h2>
-			This blog is about lifes big adventures, in the garden close to home and afield.
-		</h2>
-		<h3>Where To Start</h3>
+	<h2>
+		This blog is about lifes big adventures, in the garden close to home and afield.
+	</h2>
+	<h3 class="date1">Where To Start</h3>
+	<h4>11/7/29</h4>
+	<div>
+	<p><img class="imageFlower" src="rose-174817_1280.jpg" alt="rose">According to "The flower expert guide on flowers & gardening"... Growing flowers is an admiration for many people, a dream for so many and a full-time work for some others like who grow flower gardens for commercial purposes. Growing flowers thus serves the interests of diverse peoples. The Growing of flowers necessitates a lot of patience, love, & care. Growing a flower garden is indeed an exciting adventure altogether for those who are really crazy about flowers and growing flowers. Flowers are classified into three categories. These categories are annuals, perennials, and biennials. Once you discover all the different annual, biennial and perennial plants that you can grow and even start yourself, itÂ´s just a simple step to preparing the beds. Annuals grow from seeds and flower the current year and then die. Perennials establish themselves from seed the first year but do not usually flower until the following year. This category of flowers will re-grow and flower for many years to come. Biennials grow as a small plant during the year they are planted. In the second year they will bloom and then perish.According to "The flower expert guide on flowers & gardening"... Growing flowers is an admiration for many people, a dream for so many and a full-time work for some others like who grow flower gardens for commercial purposes. Growing flowers thus serves the interests of diverse peoples. The Growing of flowers necessitates a lot of patience, love, & care. Growing a flower garden is indeed an exciting adventure altogether for those who are really crazy about flowers and growing flowers. Flowers are classified into three categories. These categories are annuals, perennials, and biennials. Once you discover all the different annual, biennial and perennial plants that you can grow and even start yourself, itÂ´s just a simple step to preparing the beds. Annuals grow from seeds and flower the current year and then die. Perennials establish themselves from seed the first year but do not usually flower until the following year. This category of flowers will re-grow and flower for many years to come. Biennials grow as a small plant during the year they are planted. In the second year they will bloom and then perish.
+
+	</p>
+	<h3>What's Important In A Garden</h3>
+	<h4>11/7/24</h4>
+	<p><img class="imageFlower" src="images.jpeg" alt="rose">According to "The flower expert guide on flowers & gardening"... Growing flowers is an admiration for many people, a dream for so many and a full-time work for some others like who grow flower gardens for commercial purposes. Growing flowers thus serves the interests of diverse peoples. The Growing of flowers necessitates a lot of patience, love, & care. Growing a flower garden is indeed an exciting adventure altogether for those who are really crazy about flowers and growing flowers. Flowers are classified into three categories. These categories are annuals, perennials, and biennials. Once you discover all the different annual, biennial and perennial plants that you can grow and even start yourself, itÂ´s just a simple step to preparing the beds. Annuals grow from seeds and flower the current year and then die. Perennials establish themselves from seed the first year but do not usually flower until the following year. This category of flowers will re-grow and flower for many years to come. Biennials grow as a small plant during the year they are planted. In the second year they will bloom and then perish.
 		<p>According to "The flower expert guide on flowers & gardening"... Growing flowers is an admiration for many people, a dream for so many and a full-time work for some others like who grow flower gardens for commercial purposes. Growing flowers thus serves the interests of diverse peoples. The Growing of flowers necessitates a lot of patience, love, & care. Growing a flower garden is indeed an exciting adventure altogether for those who are really crazy about flowers and growing flowers. Flowers are classified into three categories. These categories are annuals, perennials, and biennials. Once you discover all the different annual, biennial and perennial plants that you can grow and even start yourself, itÂ´s just a simple step to preparing the beds. Annuals grow from seeds and flower the current year and then die. Perennials establish themselves from seed the first year but do not usually flower until the following year. This category of flowers will re-grow and flower for many years to come. Biennials grow as a small plant during the year they are planted. In the second year they will bloom and then perish.
+			<p>
+				Growing flowers is an admiration for many people, a dream for so many and a full-time work for some others like who grow flower gardens for commercial purposes. Growing flowers thus serves the interests of diverse peoples. The Growing of flowers necessitates a lot of patience, love, & care. Growing a flower garden is indeed an exciting adventure altogether for those who are really crazy about flowers and growing flowers. Flowers are classified into three categories. These categories are annuals, perennials, and biennials. Once you discover all the different annual, biennial and perennial plants that you can grow and even start yourself, itÂ´s just a simple step to preparing the beds. Annuals grow from seeds and flower the current year and then die. Perennials establish themselves from seed the first year but do not usually flower until the following year. This category of flowers will re-grow and flower for many years to come. Biennials grow as a small plant during the year they are planted. In the second year they will bloom and then perish.
 
-		</p>
-		<h3>What's Important In A Garden</h3>
-		<p>
-			Growing flowers is an admiration for many people, a dream for so many and a full-time work for some others like who grow flower gardens for commercial purposes. Growing flowers thus serves the interests of diverse peoples. The Growing of flowers necessitates a lot of patience, love, & care. Growing a flower garden is indeed an exciting adventure altogether for those who are really crazy about flowers and growing flowers. Flowers are classified into three categories. These categories are annuals, perennials, and biennials. Once you discover all the different annual, biennial and perennial plants that you can grow and even start yourself, itÂ´s just a simple step to preparing the beds. Annuals grow from seeds and flower the current year and then die. Perennials establish themselves from seed the first year but do not usually flower until the following year. This category of flowers will re-grow and flower for many years to come. Biennials grow as a small plant during the year they are planted. In the second year they will bloom and then perish.
-
-		</p>
-		<h3>What Tools, And Why</h3>
-		<p>
-			Growing flowers is an admiration for many people, a dream for so many and a full-time work for some others like who grow flower gardens for commercial purposes. Growing flowers thus serves the interests of diverse peoples. The Growing of flowers necessitates a lot of patience, love, & care. Growing a flower garden is indeed an exciting adventure altogether for those who are really crazy about flowers and growing flowers. Flowers are classified into three categories. These categories are annuals, perennials, and biennials. Once you discover all the different annual, biennial and perennial plants that you can grow and even start yourself, itÂ´s just a simple step to preparing the beds. Annuals grow from seeds and flower the current year and then die. Perennials establish themselves from seed the first year but do not usually flower until the following year. This category of flowers will re-grow and flower for many years to come. Biennials grow as a small plant during the year they are planted. In the second year they will bloom and then perish.
-		</p>
-	</div>
+			</p>
+			<h3>What Tools, And Why</h3>
+			<h4>11/7/14</h4>
+			<p><img class="imageFlower" src="dahlia.jpeg" alt="rose"> Growing flowers is an admiration for many people, a dream for so many and a full-time work for some others like who grow flower gardens for commercial purposes. Growing flowers thus serves the interests of diverse peoples. The Growing of flowers necessitates a lot of patience, love, & care. Growing a flower garden is indeed an exciting adventure altogether for those who are really crazy about flowers and growing flowers. Flowers are classified into three categories. These categories are annuals, perennials, and biennials. Once you discover all the different annual, biennial and perennial plants that you can grow and even start yourself, itÂ´s just a simple step to preparing the beds. Annuals grow from seeds and flower the current year and then die. Perennials establish themselves from seed the first year but do not usually flower until the following year. This category of flowers will re-grow and flower for many years to come. Biennials grow as a small plant during the year they are planted. In the second year they will bloom and then perish.
+			</p>
+			<p> Growing flowers is an admiration for many people, a dream for so many and a full-time work for some others like who grow flower gardens for commercial purposes. Growing flowers thus serves the interests of diverse peoples. The Growing of flowers necessitates a lot of patience, love, & care. Growing a flower garden is indeed an exciting adventure altogether for those who are really crazy about flowers and growing flowers. Flowers are classified into three categories. These categories are annuals, perennials, and biennials. Once you discover all the different annual, biennial and perennial plants that you can grow and even start yourself, itÂ´s just a simple step to preparing the beds. Annuals grow from seeds and flower the current year and then die. Perennials establish themselves from seed the first year but do not usually flower until the following year. This category of flowers will re-grow and flower for many years to come. Biennials grow as a small plant during the year they are planted. In the second year they will bloom and then perish.
+			</p>
+			</div>
 </body>
 
 </html>
