--- a/exercises/flag-css/Niger/index.html
+++ b/exercises/flag-css/Niger/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Niger</title>
 	<link rel="stylesheet" href="style.css" class="css">
 </head>
 <body>
-	<div id ="box" class ="box"></div>
-
-	
+	<div class="parent">
+	<div class="topLine"></div>
+	<div class="circle"></div>
+	<div class="bottomLine"></div>
+	</div>
 </body>
-<script src ="main.js"></script>
 </html>
