--- a/exercises/flag-css/Tonga/index.html
+++ b/exercises/flag-css/Tonga/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Tonga</title>
 	<link rel="stylesheet" href="style.css">
 </head>
 
@@ -11,7 +11,6 @@
 		<div class="parent">
 			<div class="child1"></div>
 			<div class="child2"></div>
-			<div class="child3"></div>
 		</div>
 	</div>
 </body>
