--- a/projects/zen-garden/index.html
+++ b/projects/zen-garden/index.html
@@ -1,20 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<title>Zen Garden</title>
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" href="style.css" class="css">
 </head>
+
 <body>
-<div class="container-fluid">
-	<div class="row">
-		<div class="header co-md-12"></div>
+	<div class="header container-fluid">
+		<div class="top row">
+			<div class="col-md-1 col-md-offset-1 col-xs-12">
+				<img class="waterMark" src="enso.svg">
+			</div>
+			<div class="title col-md-6 col-xs-12">
+				<h1 class="zenGarden">CSS ZEN GARDEN</h1>
+				<h2 class="h2">The Beauty of <span class="css">CSS</span> Design</h2>
+			</div>
+			<div class="col-md-4 col-xs-12"> This is side box</div>
+		</div>
+		<div class="row">
+			<div class="col-md-7 col-md-offset-1">
+				<div class="paragraphs">
+					<p>A demonstration of what can be accomplished through CSS-based design. Select any style sheet from the list to load it into this page.</p>
+
+					<p>Download the example HTML FILE and CSS FILE</p>
+					<h3>THE ROAD TO ENLIGHTENMENT</h3>
+					<p>Littering a dark and dreary road lay the past relics of browser-specific tags, incompatible DOMs, broken CSS support, and abandoned browsers.</p>
+					<p> We must clear the mind of the past. Web enlightenment has been achieved thanks to the tireless efforts of folk like the W3C, WASP, and the major browser creators.</p>
+					<p> The CSS Zen Garden invites you to relax and meditate on the important lessons of the masters. Begin to see with clarity. Learn to use the time-honored techniques in new and invigorating fashion. Become one with the web.</p>
+					<h3>SO WHAT IS THIS ABOUT?</h3>
+
+					<p> There is a continuing need to show the power of CSS. The Zen Garden aims to excite, inspire, and encourage participation. To begin, view some of the existing designs in the list. Clicking on any one will load the style sheet into this very page. The HTML remains the same, the only thing that has changed is the external CSS file. Yes, really.
+						<p> CSS allows complete and total control over the style of a hypertext document. The only way this can be illustrated in a way that gets people excited is by demonstrating what it can truly be, once the reins are placed in the hands of those able to create beauty from structure. Designers and coders alike have contributed to the beauty of the web; we can always push it further.</p>
+				</div>
+			</div>
+			<div class="col-xs-4"> This is side box</div>
+		</div>
 		
+			<div class="col-xs-4"> This is side box</div>
+			<div class="backgroundRow row">
+				<div class="col-md-7 col-md-offset-1">
+					<div class="paragraphs">
+
+						This is were the next page starts
+
+					</div>
+				</div>
+				<div class="col-xs-4"> This is side box</div>
+
+			</div>
+		
+
 	</div>
-</div>
-	
+
 </body>
+
 </html>
 
 
@@ -28,9 +70,35 @@
 		<div class="row">
 			<div class="div1 col-xs-12 col-md-12"></div>
 		</div>
-		<div class="row">
-			<div class="div2 col-xs-12 col-sm-3"></div>
-			<div class="div2 col-xs-12 col-sm-3"></div>
-			<div class="div2 col-xs-12 col-sm-3"></div>
-			<div class="div2 col-xs-12 col-sm-3"></div>
-		</div>-->
+		
+	
+
+
+<div class="row">
+						<div class=" col-xs-3 col-xs-offset-1">
+							<img class="waterMark" src="enso.svg" alt="">
+						</div>
+
+
+
+  <div class=" col-xs-3 col-xs-offset-1">
+		
+		
+		
+		
+		
+		
+		
+		
+			<div class="header col-md-8">
+				<div class="row">
+					<div class=" col-xs-3 col-xs-offset-1">
+						<img class="waterMark" src="enso.svg" alt="">
+					</div>
+					<div class="col-md-8">
+						<h1 class="zenGarden">CSS ZEN GARDEN</h1>
+						<h2>The Beauty of CSS Design</h2>
+					</div>
+					<div class"ro"
+
+				</div>
