--- a/projects/zen-garden/index.html
+++ b/projects/zen-garden/index.html
@@ -11,21 +11,21 @@
 <body>
 	<div class="header container-fluid">
 		<div class="top row">
-			<div class="col-md-1 col-md-offset-1 col-xs-12">
+			<div class="col-md-1 col-md-offset-1 col-xs-1">
 				<img class="waterMark" src="enso.svg">
 			</div>
-			<div class="title col-md-6 col-xs-12">
+			<div class="title col-xs-12 col-md-6">
 				<h1 class="zenGarden">CSS ZEN GARDEN</h1>
 				<h2 class="h2">The Beauty of <span class="css">CSS</span> Design</h2>
 			</div>
-			<div class="col-md-4 col-xs-12"> This is side box</div>
+			<div class=" col-md-3 col-md-offset-1"><a class="headerHref" href="">VIEW ALL DESIGNS</a></div>
 		</div>
-		<div class="row">
+		<div class="paragraphRow row">
 			<div class="col-md-7 col-md-offset-1">
 				<div class="paragraphs">
-					<p>A demonstration of what can be accomplished through CSS-based design. Select any style sheet from the list to load it into this page.</p>
+					<p class="topParagraph">A demonstration of what can be accomplished through CSS-based design. Select any style sheet from the list to load it into this page.</p>
 
-					<p>Download the example HTML FILE and CSS FILE</p>
+					<p>Download the example <span class="glyph glyphicon glyphicon-save"></span><a class="a" href=""> HTML FILE </a> and <span class="glyph glyphicon glyphicon-save"></span> <a class="a" href=""> CSS FILE </a></p>
 					<h3>THE ROAD TO ENLIGHTENMENT</h3>
 					<p>Littering a dark and dreary road lay the past relics of browser-specific tags, incompatible DOMs, broken CSS support, and abandoned browsers.</p>
 					<p> We must clear the mind of the past. Web enlightenment has been achieved thanks to the tireless efforts of folk like the W3C, WASP, and the major browser creators.</p>
@@ -36,24 +36,104 @@
 						<p> CSS allows complete and total control over the style of a hypertext document. The only way this can be illustrated in a way that gets people excited is by demonstrating what it can truly be, once the reins are placed in the hands of those able to create beauty from structure. Designers and coders alike have contributed to the beauty of the web; we can always push it further.</p>
 				</div>
 			</div>
-			<div class="col-xs-4"> This is side box</div>
-		</div>
-		
-			<div class="col-xs-4"> This is side box</div>
-			<div class="backgroundRow row">
-				<div class="col-md-7 col-md-offset-1">
-					<div class="paragraphs">
+			<div class="topSideBar col-xs-12 col-md-4">
 
-						This is were the next page starts
-
-					</div>
-				</div>
-				<div class="col-xs-4"> This is side box</div>
+				<ul>
+					<li class="topList"><a class="a" href="">MID CENTURY MODERN</a><br><span class="liSpan">by </span><a class="a" href="">Andrew Lohman</a>
+					</li>
+					<li class="topList"><a class="a" href="">GARMENTS</a><br><span class="liSpan">by </span><a class="a" href="">
+					Dan Mall</a>
+					</li>
+					<li class="topList"><a class="a" href="">STEEL</a><br><span class="liSpan">by </span><a class="a" href="">Steffan Knoeller</a>
+					</li>
+					<li class="topList"><a class="a" href="">APOTHECARY</a><br><span class="liSpan">by </span><a class="a" href="">Trent Walton</a>
+					</li>
+					<li class="topList"><a class="a" href="">SCREEN FILLER</a><br><span class="liSpan">by </span><a class="a" href="">Elliot Jay Stocks</a>
+					</li>
+					<li class="topList"><a class="a" href="">FOUNTAIN KISS</a><br><span class="liSpan">by </span><a class="a" href="">Jeremy Carlson</a>
+					</li>
+					<li class="topList"><a class="a" href="">A ROBOT NAMED JIMMY</a><br><span class="liSpan">by </span><a class="a" href="">meltmedia</a>
+					</li>
+					<li class="topList"><a class="a" href="">VERDE MODERNA</a><br><span class="liSpan">by </span><a class="a" href="">Dave Shea</a>
+					</li>
+				</ul>
 
 			</div>
+		</div>
+
+		<!--		<div class="col-xs-4"> This is side box</div>-->
+		<div class="backgroundRow row">
+			<div class="col-md-7 col-md-offset-1">
+				<div class="paragraphs">
+					<h3 class="topParagraph" >PARTICIPATION </h3>
+
+					<p>Strong visual design has always been our focus. You are modifying this page, so strong CSS skills are necessary too, but the example files are commented well enough that even CSS novices can use them as starting points. Please see the CSS Resource Guide for advanced tutorials and tips on working with CSS.</p>
+					<p> You may modify the style sheet in any way you wish, but not the HTML. This may seem daunting at first if you’ve never worked this way before, but follow the listed links to learn more, and use the sample files as a guide.</p>
+					<p> Download the sample HTML and CSS to work on a copy locally. Once you have completed your masterpiece (and please, don’t submit half-finished work) upload your CSS file to a web server under your control. Send us a link to an archive of that file and all associated assets, and if we choose to use it we will download it and place it on our server.</p>
+					<h3> BENEFITS</h3>
+					<p> Why participate? For recognition, inspiration, and a resource we can all refer to showing people how amazing CSS really can be. This site serves as equal parts inspiration for those working on the web today, learning tool for those who will be tomorrow, and gallery of future techniques we can all look forward to.</p>
+
+
+				</div>
+			</div>
+			<div class="midSideBar col-xs-12 col-md-4">
+				<div class="list">
+					<ul>
+						<li class="topList"><a class="a" href="">VIEW THIS DESIGNS CSS</a>
+						</li>
+						<li class="topList"><a class="a" href="">CSS RESOURCES</a>
+						</li>
+						<li class="topList"><a class="a" href="">FAQ</a>
+						</li>
+						<li class="topList"><a class="a" href="">SUBMIT A DESIGN</a>
+						</li>
+						<li class="topList"><a class="a" href="">TRANSLATIONS</a>
+						</li>
+
+					</ul>
+
+				</div>
+
+			</div>
+
+		</div>
+		<div class="row">
+			<div class="col-md-7 col-md-offset-1">
+				<div class="paragraphs">
+					<h3 class="topParagraph">REQUIREMENTS</h3>
+					<p>Where possible, we would like to see mostly CSS 1 & 2 usage. CSS 3 & 4 should be limited to widely-supported elements only, or strong fallbacks should be provided. The CSS Zen Garden is about functional, practical CSS and not the latest bleeding-edge tricks viewable by 2% of the browsing public. The only real requirement we have is that your CSS validates.<p></p><p>Luckily, designing this way shows how well various browsers have implemented CSS by now. When sticking to the guidelines you should see fairly consistent results across most modern browsers. Due to the sheer number of user agents on the web these days — especially when you factor in mobile — pixel-perfect layouts may not be possible across every platform. That’s okay, but do test in as many as you can. Your design should work in at least IE9+ and the latest Chrome, Firefox, iOS and Android browsers (run by over 90% of the population).</p><p>We ask that you submit original artwork. Please respect copyright laws. Please keep objectionable material to a minimum, and try to incorporate unique and interesting visual themes to your work. We’re well past the point of needing another garden-related design.</p>This is a learning exercise as well as a demonstration. You retain full copyright on your graphics (with limited exceptions, see submission guidelines), but we ask you release your CSS under a Creative Commons license identical to the one on this site so that others may learn from your work.
+
+				</div>
+
+			</div>
+			<div class="botSideBar col-md-4"></div>
+
+		</div>
 		
+		<div class="bottomRow row">
+			<div class=" coverBottom col-xs-12"></div>
+				<h2 class="bottomh2">By <a class ="botHref"href="">Dave Shea </a>.Bandwith graciously donated by</h2><br><h2 class="bottomh2"><a class ="botHref" href="">mediatemple</a>. Now avaiable: <a class ="botHref" href="">Zen Garden, the book</a>.</h2>
+
+		</div>
+		<div class="footer row">
+			<div class="col-xs-12">
+		     <a class="verde" href="" >5</a>
+		     <a class="verde" href="" >3</a>
+		     <a class="verde" href="" >c</a>
+		     <a class="verde" href="" >a</a>
+		     <a class="verde" href="" >g</a>
+			
+			</div>
+
+		</div>
 
 	</div>
+
+
+
+
+
+
 
 </body>
 
