finished some old exorcises

--- a/exercises/bootstrap=luigi/index.html
+++ b/exercises/bootstrap=luigi/index.html
@@ -9,28 +9,36 @@
 </head>
 
 <body>
-	<div class="container col-xs-8 col-md-offset-2">
-		<div class=" row">
-			<div class="yellow col-xs-12  ">
-				<h1>Luigi</h1>
-			</div>
-			
-			<div class=" red col-xs-12 ">
-				<img class="imgLuigi" class="img-responsive" src="luigi.png">
-			</div>
-			<div class=" white"" col-xs-12 ">
-				<h2>ABOUT ME</h2>
-				<P><b>My name is luigi.I'm a second rate kind of hero <br>no one takes me seriously<br> but that is ok I guess</b></P>
-			</div>
-			<div class=" col-xs-12 col-md-offset-11">
-				
-				<img class="mushroom" class="img-responsive" src="greenmushroom.png">
-			</div>
-	
-	
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-xs-8 col-xs-offset-2">
+				<div class=" row">
+					<div class="yellow col-xs-12  ">
+						<h1>Luigi</h1>
+					</div>
+					<div class=" red col-xs-12">
+						<div class="row">
+							<div class="col-xs-4 col-xs-offset-4">
+								<img class="imgLuigi img-responsive" src="luigi.png">
+							</div>
+						</div>
+					</div>
+					<div class=" white col-xs-12 ">
+						<h2>ABOUT ME</h2>
+						<P><b>My name is luigi.I'm a second rate kind of hero <br>no one takes me seriously<br> but that is ok I guess</b></P>
+					</div>
+					<div class="yellow col-xs-12">
+						<div class="col-xs-1 col-xs-offset-11">
 
+							<img class="mushroom" class="img-responsive" src="greenmushroom.png">
+						</div>
+					</div>
+
+
+				</div>
+			</div>
 		</div>
-		</div>
+	</div>
 </body>
 
 </html>
