Finished pricess castle, and worked on excorcises

--- a/exercises/to-do-axios/index.html
+++ b/exercises/to-do-axios/index.html
@@ -16,19 +16,17 @@
 		<div id="div1" class="div1">
 			<p>This is my list of todo items</p>
 			<input id="title" class="input" placeholder="title" >
-			<input id="price" class="input" placeholder="cost" >
+			<input id="price" class="input" type="number" placeholder="cost" >
 			<input id="description" class="input" placeholder="list item">
 			
 			<button id="send" type="button" >Append List</button>
 			
-			<div>
+			<div class="div2">
 			<ul id="listTitle"> 
 				
 			</ul>
 				
 			</div>
-
-
 
 		</div>
 	</form>
