--- a/projects/mario-pest/index.html
+++ b/projects/mario-pest/index.html
@@ -59,7 +59,7 @@
 		<span class="http">http="url:mariohomepage</span>
 		<span class="address">Address: Mario Land Castle</span>
 	</footer>
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script> 
 	<script src="mario.js"></script>
 </body>
 
