--- a/exercises/to-do-axios/index.html
+++ b/exercises/to-do-axios/index.html
@@ -23,11 +23,14 @@
 			
 			<div class="div2">
 			<ul id="listTitle"> 
-				
 			</ul>
-				
+			</div>
+			<div>
+			<ul id="listPrice">	
+			</ul>
 			</div>
 
+		
 		</div>
 	</form>
 </body>
